HFP-3580 Fix input field border contrast

--- a/css/blanks.css
+++ b/css/blanks.css
@@ -18,8 +18,8 @@
 }
 .h5p-blanks .h5p-text-input:focus {
   outline: none;
-  box-shadow: 0 0 0.5em 0 #7fb8ff;
-  border-color: #7fb8ff;
+  box-shadow: 0 0 0.5em 0 #6391CA;
+  border-color: #6391CA;
 }
 .h5p-blanks .h5p-text-input:disabled {
   opacity: 1;
